TheKabal (29 June 2013)
--------------------------------------
Fix check_login to no longer give errors when you access a page after you've logged out
Simplify common - remove hard coded language array
Move localized language names into language files
Redo option & option2 to support drop-in language files (not hard-coded against an array any more)

TheKabal (22 June 2013)
--------------------------------------
Change loops in later steps to match the new loop style from sector placement (X-500, not X-499), saves a loop from each by default
Add benchmarking for DB calls in final step (step 9 / 80.php) of big bang
Cleanup timer / elapsed calls to simplify them (substr is now not needed, as the class returns a nicely formatted version)
Change all timer elapsed output to be two significant digits - We don't need to worry about things that take less than 1/100th of a second.
In the Timer class, extremely small values (E-6 seconds small) were being reported as whole seconds
In big bang, cleanup how benchmarking is done so that the local timer is only created once
In big bang, streamline the language and config storage into DB down to one SQL insert for each - shaving 5 seconds off the processing time of step 6.
Fix big bang sector placement, it varied between putting 501 in the wrong place to putting a sector 1001, and a couple of other variations. Now actually places what you ask for.

TheKabal (21 June 2013)
--------------------------------------
Changed footer to be more correct, using three-column footer (float with align)
Added new feature, automatically auto-focuses on the submit/continue.etc button. Now you can space bar through all of BB!

TheKabal (18 June 2013)
--------------------------------------
Fix big bang to add a 1-max_planets_sector random number of planets per sector it selects for placement, but no more than the total number of planets
Fix fed space not being created in enough sectors