@@ -33,9 +33,38 @@ $variables['steps'] = $bigbang_info['steps'];
 $variables['current_step'] = $bigbang_info['current_step'];
 $variables['next_step'] = $bigbang_info['next_step'];
 
+$lang_dir = new DirectoryIterator ('languages/');
+$lang_list = array ();
+$i = 0;
+foreach ($lang_dir as $file_info) // Get a list of the files in the languages directory
+{
+    // This is to get around the issue of not having DirectoryIterator::getExtension.
+    $file_ext = pathinfo ($file_info->getFilename (), PATHINFO_EXTENSION);
+
+    // If it is a PHP file, add it to the list of accepted language files
+    if ($file_info->isFile () && $file_ext == 'php') // If it is a PHP file, add it to the list of accepted make galaxy files
+    {
+        $lang_file = substr ($file_info->getFilename (), 0, -8); // The actual file name
+
+        // Select from the database and return the localized name of the language
+        $result = $db->Execute ("SELECT value FROM {$db->prefix}languages WHERE category = 'regional' AND section = ? AND name = 'local_lang_name';", array ($lang_file));
+        DbOp::dbResult ($db, $result, __LINE__, __FILE__);
+        while ($result && !$result->EOF)
+        {
+            $row = $result->fields;
+            $variables['lang_list'][$i]['file'] = $lang_file;
+            $variables['lang_list'][$i]['value'] = $row['value'];
+            $variables['lang_list'][$i]['selected'] = $bntreg->get("default_lang");
+            $i++;
+            $result->MoveNext();
+        }
+    }
+}
+$variables['lang_list']['size'] = $i -1;
+
 // Database driven language entries
 $langvars = null;
-$langvars = BntTranslate::load ($db, $lang, array ('common', 'regional', 'footer', 'global_includes', 'create_universe'));
+$langvars = BntTranslate::load ($db, $lang, array ('common', 'regional', 'footer', 'global_includes', 'create_universe', 'options'));
 $template->AddVariables ('langvars', $langvars);
 
 // Pull in footer variables from footer_t.php
