@@ -113,6 +113,7 @@
     <input type=hidden name=loops value={$variables['loops']}>
     <input type=hidden name=sector_max value={$variables['sector_max']}>
     <input type=hidden name=swordfish value={$variables['swordfish']}>
+    <input type=hidden name=newlang value={$variables['newlang']}>
     <input type="hidden" name="autorun" value="{$variables['autorun']}">
     {/if}
   </table>
